tests/katib/katib-controller/overlays/istio/test_data/expected/kubeflow_~g_v1_configmap_katib-parameters.yaml
apiVersion: v1
data:
  clusterDomain: cluster.local
kind: ConfigMap
metadata:
  name: katib-parameters
  namespace: kubeflow
