tests/katib/katib-controller/overlays/istio/test_data/expected/kubeflow_~g_v1_service_katib-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: katib
    component: ui
  name: katib-ui
  namespace: kubeflow
spec:
  ports:
  - name: ui
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: katib
    component: ui
  type: ClusterIP
