tests/katib/katib-controller/overlays/istio/test_data/expected/kubeflow_~g_v1_serviceaccount_katib-controller.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: katib-controller
  namespace: kubeflow
