tests/katib/katib-controller/overlays/istio/test_data/expected/rbac.authorization.k8s.io_v1_clusterrole_katib-ui.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: katib-ui
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  - namespaces
  verbs:
  - '*'
- apiGroups:
  - kubeflow.org
  resources:
  - experiments
  - trials
  verbs:
  - '*'
